@@ -1,3 +1,4 @@
+ - implemented url sharing
  - implemented file sharing
 
 0.0.2:
